# ResNetTensorRT

./: .gitignore  Dockerfile  Dockerfile.flask  MODERNIZATION_SUMMARY.md  README.md  docker-compose.yml  main.py  old_Dockerfile  pyproject.toml  requirements.flask.txt  requirements.txt  streamlit_app.py
.github/workflows/: lint.yml  tests.yml
app/: __init__.py  routes.py  utils.py
app/templates/: base.html  demo.html  results.html
benchmark/: benchmark_models.py  benchmark_utils.py
common/: utils.py
core_logic_service/: Dockerfile  Dockerfile.tests  config.py  requirements.txt
core_logic_service/app/: __init__.py  routes.py
core_logic_service/tests/: test_routes.py
onnx_exporter_service/: Dockerfile
onnx_exporter_service/app/: __init__.py  routes.py
onnx_inference_service/app/: onnx_inference.py
ov_inference_service/app/: __init__.py  ov_inference.py  routes.py
prediction/: prediction_models.py  prediction_utils.py
pytorch_inference_service/: Dockerfile  requirements.txt
pytorch_inference_service/app/: __init__.py  pytorch_inference.py  routes.py
pytorch_inference_service/tests/: test_inference.py
src/: benchmark.py  benchmark_class.py  export_to_onnx.py  image_processor.py  infer.py  inference_base.py  main.py  model.py  onnx_cuda_inference.py  onnx_exporter.py  onnx_inference.py  onnx_to_tensorrt.py  ov_exporter.py  ov_inference.py  pytorch_inference.py  tensorrt_inference.py
src/web_demo/: app.py  config.py
src/web_demo/static/css/: styles.css
src/web_demo/static/js/: scripts.js
src/web_demo/templates/: base.html  demo.html  index.html
tests/: test_image_processor.py  test_inference_base.py  test_main_integration.py  test_model.py  test_onnx.py  test_openvino.py  test_pytorch_inference.py  test_utils.py
